snapshot-tests/tests/snapshots/parser__datetimes__utc_invalid.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-datetime]: 
  ┌─ utc_invalid:1:7
  │
1 │ utc = 2016-9-09T09:09:09Z
  │       ^^^^^^^^^^^^^^^^^^^ invalid datetime: expected 2-digit month at utc
